# prove-or-abstain

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  UI-REVIEW.md  agent_state.py  attribution.py  attribution_reference.py  autopilot.py  benchmark_results.json  check_qwen.py  gate_check.py  gate_check_gates.py  gates.py  graph.py  llm.py  mcp_server.py  metrics.py  nodes.py  panels.py  project-context.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_phase1.py  scenarios.py  simulate.py  sinks.py  webhook.py
api/: app.py
bench/: README.md  __init__.py  agents.py  figure.py  metrics.json  metrics.py  results.json  run.py
connectors/: gsheets.py  sql.py
deploy/: aliyun.sh
docs/: HACKER_NEWS_POST.md  PRODUCT_HUNT_POST.md  UI-REVIEW.md  blog.md  demo_script.md  deploy.md  deployment_verification.md  devpost.md
examples/: baseline.csv  current_clean.csv  current_diffuse.csv  plan_baseline.csv  plan_current.csv  real_cars_baseline.csv  real_cars_current.csv  real_diamonds_baseline.csv  real_diamonds_current.csv  real_diamonds_raw.csv  real_flights_series.csv  real_gapminder_baseline.csv  real_gapminder_current.csv  real_iris_baseline.csv  real_iris_current.csv  real_majors_nonstem.csv  real_majors_nonstem_raw.csv  real_majors_stem.csv  real_majors_stem_raw.csv  real_mpg_baseline.csv  real_mpg_current.csv  real_penguins_baseline.csv  real_penguins_current.csv  real_penguins_raw.csv  real_taxis_weekday.csv  real_taxis_weekend.csv  real_tips_baseline.csv  real_tips_current.csv  real_tips_raw.csv  revenue_baseline.csv  (+7 more)
(+51 files in other folders)
